Fixing div overflowing in the all contest section

--- a/app/assets/stylesheets/pages/_user.scss
+++ b/app/assets/stylesheets/pages/_user.scss
@@ -14,6 +14,8 @@ h2 {
     margin-left: 30px;
     margin-bottom: 30px;
     width: 270px;
+    display: flex;
+    flex-direction: column;
 
     a {
         text-align: center;
@@ -61,12 +63,10 @@ h2 {
 
     #collapseAllContests {
         overflow: scroll;
-        height: 240px;
     }
 
     #collapseAllContestsRanking {
         overflow: scroll;
-        height: 160px;
     }
 }
 
